--- a/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
+++ b/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
@@ -19,7 +19,7 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Te-sl-4HZ">
                     <rect key="frame" x="20" y="20" width="335" height="94"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="Sgx-sT-G82">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="Sgx-sT-G82" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
                             <rect key="frame" x="135.5" y="0.0" width="64" height="64"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="64" id="mFM-Wn-9HA"/>
@@ -28,9 +28,6 @@
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-Wp-Ea1">
                             <rect key="frame" x="127.5" y="74" width="80" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="kHM-6k-Yvf"/>
-                            </constraints>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                             <state key="normal" title="Button text">
                                 <color key="titleColor" red="0.0" green="0.52941176470588236" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
