MenuDetails dynamic types
Adding support for dynamic type to:
- `MenuDetailsViewController`
- `MenuItemAbstractView`
- `MenuItemsViewController`
- `MenuItemView`

--- a/WordPress/Classes/ViewRelated/Menus/Menus.storyboard
+++ b/WordPress/Classes/ViewRelated/Menus/Menus.storyboard
@@ -155,7 +155,7 @@
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Menu Name" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Cbo-az-zau">
                                                 <rect key="frame" x="10" y="0.0" width="643" height="40"/>
-                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                                                 <connections>
                                                     <outlet property="delegate" destination="cDP-ki-Cxk" id="eOf-J4-5Jd"/>
@@ -170,14 +170,14 @@
                                             <constraint firstItem="Cbo-az-zau" firstAttribute="height" secondItem="rTp-r7-MfI" secondAttribute="height" id="s0C-uv-Pim"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="240" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Je-dj-7Tz">
-                                        <rect key="frame" x="667" y="6" width="55" height="40"/>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="240" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Je-dj-7Tz">
+                                        <rect key="frame" x="667" y="10" width="55" height="32"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" priority="999" constant="55" id="OQ1-bw-deR"/>
-                                            <constraint firstAttribute="height" constant="40" id="Ylq-Y4-Bnb"/>
+                                            <constraint firstAttribute="width" priority="998" constant="55" id="OQ1-bw-deR"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="55" id="ZOb-Md-7SI"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                         <state key="normal" title="Done"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLL-54-qPA">
